// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process and Tracing enabled 1`] = `null`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process and Tracing enabled 2`] = `
<ForwardRef>
  <RuntimeTools
    availablePages={Array []}
    dataIndexUrl="http://localhost:4000"
    devUIUrl="http://localhost:8080"
    isProcessEnabled={true}
    isStunnerEnabled={false}
    isTracingEnabled={true}
    navigate="test"
    omittedProcessTimelineEvents={Array []}
    openApiPath="/docs/openapi.json"
    trustyServiceUrl="http://localhost:1336"
    users={Array []}
  />
</ForwardRef>
`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process disabled, Trusty disabled 1`] = `<ForwardRef />`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process disabled, Trusty enabled 1`] = `
<ForwardRef>
  <RuntimeTools
    availablePages={Array []}
    dataIndexUrl="http://localhost:4000"
    devUIUrl=""
    isProcessEnabled={false}
    isStunnerEnabled={false}
    isTracingEnabled={true}
    navigate="test"
    omittedProcessTimelineEvents={Array []}
    openApiPath=""
    trustyServiceUrl="http://localhost:8081"
    users={Array []}
  />
</ForwardRef>
`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process enabled, Trusty disabled 1`] = `
<ForwardRef>
  <RuntimeTools
    availablePages={Array []}
    dataIndexUrl="http://localhost:4000"
    devUIUrl=""
    isProcessEnabled={true}
    isStunnerEnabled={false}
    isTracingEnabled={false}
    navigate="test"
    omittedProcessTimelineEvents={Array []}
    openApiPath=""
    trustyServiceUrl="http://localhost:8081"
    users={Array []}
  />
</ForwardRef>
`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process enabled, Trusty enabled, navitageTo empty 1`] = `<ForwardRef />`;
